--- a/IDA_star/requirements.txt
+++ b/IDA_star/requirements.txt
@@ -2,7 +2,8 @@ cloudpickle==3.1.1
 contourpy==1.3.1
 cycler==0.12.1
 fonttools==4.57.0
-gym==0.26.2
+gym==0.26.2  # (If you want the older gym, else remove this and use gymnasium)
+gymnasium==0.29.1
 gym-notices==0.0.8
 kiwisolver==1.4.8
 matplotlib==3.10.1
@@ -12,3 +13,4 @@ pillow==11.1.0
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 six==1.17.0
+imageio[ffmpeg]==2.34.1
